// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

enum Category {
  MUG
  GLASS
  TEASET
  DECORATION
  VASE
  SCULPTURE
  OTHER
}

model Product {
  id                     String      @id @default(uuid())
  name                   String
  priceInCents           Int
  filePath               String
  imagePath              String
  description            String
  category               Category
  isAvailableForPurchase Boolean     @default(true)
  createdAt              DateTime    @default(now())
  updatedAt              DateTime    @updatedAt
  quantity               Int         @default(1)
  orderItems             OrderItem[]

  images      ProductImage[]

  downloadVerifications DownloadVerification[]
}

model ProductImage {
  id        String   @id @default(uuid())
  url       String   
  isMain    Boolean  @default(false)

  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  // firstName String?
  // lastName  String?
  // city      String?
  // deliveryDepartment  Int?
  // phoneNumber String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  orders    Order[]
}

model Order {
  id               String   @id @default(uuid())
  pricePaidInCents Int
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  userId     String
  user       User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  orderItems OrderItem[]
}

model OrderItem {
  id        String  @id @default(uuid())
  orderId   String
  productId String
  quantity  Int
  order     Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product   Product @relation(fields: [productId], references: [id], onDelete: Restrict)
}

model DownloadVerification {
  id        String   @id @default(uuid())
  createdAt DateTime @default(now())
  expiresAt DateTime
  productId String
  product   Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
}
