//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Product {
  id String [pk]
  name String [not null]
  priceInCents Int [not null]
  filePath String [not null]
  imagePath String [not null]
  description String [not null]
  category Category [not null]
  isAvailableForPurchase Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  quantity Int [not null, default: 1]
  orderItems OrderItem [not null]
  images ProductImage [not null]
  downloadVerifications DownloadVerification [not null]
}

Table ProductImage {
  id String [pk]
  url String [not null]
  isMain Boolean [not null, default: false]
  productId String [not null]
  product Product [not null]
}

Table User {
  id String [pk]
  email String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orders Order [not null]
}

Table Order {
  id String [pk]
  pricePaidInCents Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  user User [not null]
  orderItems OrderItem [not null]
}

Table OrderItem {
  id String [pk]
  orderId String [not null]
  productId String [not null]
  quantity Int [not null]
  order Order [not null]
  product Product [not null]
}

Table DownloadVerification {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  expiresAt DateTime [not null]
  productId String [not null]
  product Product [not null]
}

Enum Category {
  MUG
  GLASS
  TEASET
  DECORATION
  VASE
  SCULPTURE
  OTHER
}

Ref: ProductImage.productId > Product.id [delete: Cascade]

Ref: Order.userId > User.id [delete: Cascade]

Ref: OrderItem.orderId > Order.id [delete: Cascade]

Ref: OrderItem.productId > Product.id [delete: Restrict]

Ref: DownloadVerification.productId > Product.id [delete: Cascade]